# auto-doc

./: .gitignore  README.md  pyproject.toml
auto_doc/: auto_doc_app.py  auto_doc_run.py  streamlit_app.py  streamlit_run.py
auto_doc/equipe/: auto_doc_equipe.py  auto_doc_execucao.py  diagramadores_equipe.py  documentadores_equipe.py
auto_doc/equipe/config/: agents.yaml  exemplos.yaml  exemplos_diagramadores.yaml  tasks.yaml
auto_doc/paginas/: esquadrao_diagramadores.py  exemplo_resultado.py  liga_documentadores.py  pagina_diagramadores.py  pagina_documentadores.py
