[tool.poetry]
name = "auto-doc"
version = "0.1.0"
description = ""
authors = ["rodrigo.goncalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10"
crewai = {extras = ["tools"], version = "^0.76.9"}
streamlit = "^1.39.0"
google-generativeai = "^0.8.3"
pysqlite3-binary = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
